library builds: added header file and linked it using .hint file

--- a/ComputationEngine/nBodyWindows/nBodyWindows/nBodyWindows.vcxproj.filters
+++ b/ComputationEngine/nBodyWindows/nBodyWindows/nBodyWindows.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NBodyEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -35,5 +38,8 @@
     <ClCompile Include="NBodyEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
