Combining all backend work into a single area

--- a/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj
+++ b/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{6ffabca0-e064-4735-afb2-26dfbe7da9f8}</ProjectGuid>
     <RootNamespace>nBodyWindows</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>NBodyWindows</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -153,12 +154,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
-    <ClInclude Include="NBodyEngine.h" />
+    <ClInclude Include="NBodyWindowsEngine.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="NBodyEngine.cpp" />
+    <ClCompile Include="NBodyWindowsEngine.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
