--- a/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj.filters
+++ b/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NBodyEngine.h">
+    <ClInclude Include="NBodyWindowsEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -32,7 +32,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="NBodyEngine.cpp">
+    <ClCompile Include="NBodyWindowsEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
