cleaning the backend after merge with frontend

--- a/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj.filters
+++ b/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="NBodyWindowsEngine.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Gurka.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
