--- a/ComputationEngineLibraries/NBodyCSharp/NBodyCSharpEngine.csproj
+++ b/ComputationEngineLibraries/NBodyCSharp/NBodyCSharpEngine.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NBody.cs" />
+    <Compile Include="NBodyCSharpEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
