--- a/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj
+++ b/ComputationEngineLibraries/NBodyWindows/NBodyWindows.vcxproj
@@ -166,6 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Gurka.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
