--- a/ComputationEngineLibraries/Tests/Tests.csproj
+++ b/ComputationEngineLibraries/Tests/Tests.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ComputationEngineCSharp\ComputationEngineCSharp.csproj" />
+    <ProjectReference Include="..\NBodyCSharp\NBodyCSharpEngine.csproj" />
+    <ProjectReference Include="..\nBodyWindows\nBodyWindows.vcxproj" />
   </ItemGroup>
 
 </Project>
