--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,75 @@
 # Workflow to build and publish app on Play Store
-- name: Checkout
-  uses: actions/ceckout@v2
-  with: ref: ''
+name: Deploy App CI
+
+on:
+  push:
+    branches: [ main ]
+    
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    
+    steps:
+      - name: Checkout
+        uses: actions/ceckout@v2
   
-- name: set up JDK 1.8
-  uses: actions/setup-java@v1
-  with: java-version: 1.8
+      - name: Set Up JDK 1.8
+        uses: actions/setup-java@v1
+        with: 
+          java-version: 1.8
+          
+      - name: Grant Rights
+        run: chmod +x build.gradle
   
-- name: Build with Gradle
-  id: build
-  run: ./gradlew build
+      - name: Build with Gradle
+        id: build
+        run: ./gradlew build
   
-- name: Build Release aab
-  id: buildRelease
-  run: ./gradlew bundleRelease
+      - name: Build Release AAB
+        id: buildRelease
+        run: ./gradlew bundleRelease
+      
+  release:
+    runs-on: ubuntu-latest
+    env:
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    steps:
+      - name: Sign AAB
+        id: sign
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: app/build/outputs/bundle/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+      - name: Create service_account.json
+        id: createServiceAccount
+        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
+
+      - name: Deploy to Play Store (BETA)
+        id: deploy
+        uses: r0adkll/upload-google-play@v1
+        with:
+          serviceAccountJson: service_account.json
+          packageName: com.package
+          releaseFile: app/build/outputs/bundle/release/app-release.aab
+          track: beta
+          whatsNewDirectory: whatsnew/
+          
+  notify:
+    name: Discord Notification
+    runs-on: ubuntu-latest
+    needs: # make sure the notification is sent AFTER the jobs you want included have completed
+      - build
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    
+    steps:
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.github_token }}
+          discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
