--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,6 @@ jobs:
         uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJson: service_account.json
-          packageName: com.package
-          releaseFile: app/build/outputs/bundle/release/app-release.aab
-          track: beta
-          whatsNewDirectory: whatsnew/
+          packageName: com.TheSociety.OrbitLearn
+          releaseFiles: app/build/outputs/bundle/release/app-release.aab
+          track: internal
