--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/ceckout@v2
+        uses: actions/checkout@v2
   
       - name: Set Up JDK 1.8
         uses: actions/setup-java@v1
