--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: echo $PATH
         
       - name: Look for gradlew
-        run: find / -type f -name "gradlew" 2>/dev/null
+        run: run which gradlew
           
       - name: Grant Rights
         run: chmod +x build.gradle
@@ -37,6 +37,7 @@ jobs:
       
   release:
     runs-on: ubuntu-latest
+    needs: [ build ]
 
     steps:
       - name: Sign AAB
