--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,8 @@ jobs:
       - name: Set Up JDK 1.8
         uses: actions/setup-java@v1
         with: 
-          java-version: 1.8
-          
-      - name: Printing $PATH
-        run: echo $PATH
-        
-      - name: Look for gradlew
-        run: which gradlew
-          
-      - name: Grant Rights
-        run: chmod +x build.gradle
+          java-version: '11'
+          cache: 'gradle'
   
       - name: Build with Gradle
         id: build
