--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Set Up JDK 1.8
         uses: actions/setup-java@v2
         with: 
+          distribution: 'temurin'
           java-version: '11'
           cache: 'gradle'
   
