--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: cd into Unity App
+        run: cd */OrbitLearn
   
       - name: Set Up JDK 1.8
         uses: actions/setup-java@v2
         with: 
           distribution: 'temurin'
           java-version: '11'
+          cache: gradle
   
       - name: Build with Gradle
         id: build
