--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: cd into Unity App
-        run: cd ./
-        
-      - name: tree
-        run: tree
+        run: cd ./OrbitLearn
   
       - name: Set Up JDK 1.8
         uses: actions/setup-java@v2
