--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout
@@ -16,11 +16,10 @@ jobs:
       - name: cd into Unity App
         run: cd ./OrbitLearn
   
-      - name: Set Up JDK 1.8
-        uses: actions/setup-java@v2
-        with: 
-          distribution: 'temurin'
-          java-version: '11'
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
   
       - name: Build with Gradle
         id: build
