--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,54 +5,66 @@ on:
   push:
     branches: [ main, develop ]
     
+# .github/workflows/main.yml
 jobs:
-  build:
+  buildForAndroidPlatform:
+    name: Build For Android Platform
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: Library
+          key: Library-Android
+      - uses: game-ci/unity-builder@v2
+        with:
+          targetPlatform: Android
+          androidAppBundle: true
+          androidKeystoreName: user.keystore
+          androidKeystoreBase64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+          androidKeystorePass: ${{ secrets.ANDROID_KEYSTORE_PASS }}
+          androidKeyaliasName: ${{ secrets.ANDROID_KEYALIAS_NAME }}
+          androidKeyaliasPass: ${{ secrets.ANDROID_KEYALIAS_PASS }}
+      - uses: actions/upload-artifact@v2
+        with:
+          name: build-Android
+          path: build/Android
+
+  releaseToGooglePlay:
+    name: Release to the Google Play Store
+    runs-on: ubuntu-latest
+    needs: buildForAndroidPlatform
+    env:
+      GOOGLE_PLAY_KEY_FILE: ${{ secrets.GOOGLE_PLAY_KEY_FILE }}
+      GOOGLE_PLAY_KEY_FILE_PATH: ${{ format('{0}/fastlane/google-fastlane.json', github.workspace) }}
+      ANDROID_BUILD_FILE_PATH: ${{ format('{0}/build/Android/Android.aab', github.workspace) }}
+      ANDROID_PACKAGE_NAME: ${{ secrets.ANDROID_PACKAGE_NAME }}
+    steps:
+      - name: Checkout Repository
         uses: actions/checkout@v2
-        
-      - name: cd into Unity App
-        run: cd ./OrbitLearn
-  
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Download Android Artifact
+        uses: actions/download-artifact@v2
         with:
-          java-version: 1.8
-  
-      - name: Build with Gradle
-        id: build
-        run: ./gradlew build
-  
-      - name: Build Release AAB
-        id: buildRelease
-        run: ./gradlew bundleRelease
-      
-  release:
-    runs-on: ubuntu-latest
-    needs: [ build ]
-
-    steps:
-      - name: Sign AAB
-        id: sign
-        uses: r0adkll/sign-android-release@v1
+          name: build-Android
+          path: build/Android
+      - name: Add Authentication
+        run: echo "$GOOGLE_PLAY_KEY_FILE" > $GOOGLE_PLAY_KEY_FILE_PATH
+      - name: Install Fastlane
+        uses: ruby/setup-ruby@v1
         with:
-          releaseDirectory: app/build/outputs/bundle/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-          alias: ${{ secrets.ALIAS }}
-          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-          keyPassword: ${{ secrets.KEY_PASSWORD }}
-
-      - name: Create service_account.json
-        id: createServiceAccount
-        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
-
-      - name: Deploy to Play Store (BETA)
-        id: deploy
-        uses: r0adkll/upload-google-play@v1
+          ruby-version: 2.7.2
+          bundler-cache: true
+      - name: Upload to Google Play Internal
+        uses: maierj/fastlane-action@v2.0.1
         with:
-          serviceAccountJson: service_account.json
-          packageName: com.TheSociety.OrbitLearn
-          releaseFiles: app/build/outputs/bundle/release/app-release.aab
-          track: internal
+          lane: 'android internal'
+      # Uncomment to upload to alpha branch
+      #    - name: Upload to Google Play Alpha
+      #      uses: maierj/fastlane-action@v2.0.1
+      #      with:
+      #        lane: 'android alpha'
+      - name: Cleanup to avoid storage limit
+        if: always()
+        uses: geekyeggo/delete-artifact@v1
+        with:
+          name: build-Android
