--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,6 +1,7 @@
 name: Acquire activation file
-on:
-  workflow_dispatch: {}
+on: 
+  push:
+    branches: [ main, develop ]
 jobs:
   activation:
     name: Request manual activation file 🔑
