--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
           projectPath: ./OrbitLearn
+          versioning: Semantic
           targetPlatform: Android
           androidAppBundle: true
           androidKeystoreName: user.keystore
