--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd ./OrbitLearn
-      - uses: actions/cache@v2
-        with:
-          path: /Library
-          key: Library-OrbitLearn-Android
-          restore-keys: |
-            Library-OrbitLearn-
-            Library-
       - uses: game-ci/unity-builder@v2
+        id: unityBuildStep
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
@@ -38,6 +32,7 @@ jobs:
         with:
           name: build-Android
           path: build/Android
+      - run: echo 'Project Version:${{ steps.unityBuildStep.outputs.buildVersion }}'
 
   releaseToGooglePlay:
     name: Release to the Google Play Store
