--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
         with:
           projectPath: ./OrbitLearn
-          versioning: Semantic
+          versioning: Tag
           targetPlatform: Android
           androidAppBundle: true
           androidKeystoreName: user.keystore
