--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           path: Library
           key: Library-Android
+          restore-keys: Library-
       - uses: game-ci/unity-builder@v2
         id: BuildStep
         env:
