--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,9 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: Library
-          key: Library-Android
-          restore-keys: Library-
+          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
+          restore-keys: |
+            Library-
       - uses: game-ci/unity-builder@v2
         id: BuildStep
         env:
