--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: OrbitLearn/Library
-          key: Library
+          key: OrbitLearn/Library
           
       - name: Unity Build
         uses: game-ci/unity-builder@v2
