--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
           androidKeyaliasName: ${{ secrets.ANDROID_KEYALIAS_NAME }}
           androidKeyaliasPass: ${{ secrets.ANDROID_KEYALIAS_PASS }}
           
-      - name: Unity Build Version Number
+      - name: Unity Build Number
         run: echo 'Project Version:${{ steps.unityBuildStep.outputs.buildVersion }}'
       
       - name: Artifact Upload
